--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.20.0",
-  "dependencies": {
+  "devDependencies": {
     "vite": "^7.3.0"
   }
 }
